Removing some tiny visual bugs on mobile

--- a/src/client/components/RadioButton/RadioButton.css
+++ b/src/client/components/RadioButton/RadioButton.css
@@ -4,6 +4,7 @@
 
 .wrapper {
   display: block;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .label {
