--- a/src/client/components/Submit/Submit.css
+++ b/src/client/components/Submit/Submit.css
@@ -12,7 +12,6 @@
 
 .button:hover {
   cursor: pointer;
-  background: grayLighter;
 }
 
 .button:focus {
